frontend-8: changed a lot of icons (looks good I think). also changed red and green background foreground drawables.

--- a/app/src/main/res/drawable/ic_hint_ort10.xml
+++ b/app/src/main/res/drawable/ic_hint_ort10.xml
@@ -1,8 +1,78 @@
-<!-- drawable/briefcase.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
-    android:width="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M10,2H14A2,2 0 0,1 16,4V6H20A2,2 0 0,1 22,8V19A2,2 0 0,1 20,21H4C2.89,21 2,20.1 2,19V8C2,6.89 2.89,6 4,6H8V4C8,2.89 8.89,2 10,2M14,6V4H10V6H14Z" />
+    android:width="426.24dp"
+    android:height="426.24dp"
+    android:viewportWidth="426.24"
+    android:viewportHeight="426.24">
+  <path
+      android:pathData="M420.24,175.16l0,34.5l-33,0l-28.42,0l-183.06,0l-138,0l-27.98,0l0,-34.5l46.19,0l73.89,0l58,0l74,0l74,0z"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M387.24,209.66l0,202.75l-28.42,0l0,-202.75l28.42,0"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M358.82,209.66l0,61.49l-183.06,0l0,-61.49l183.06,0"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M352.82,215.66l-171.06,0l0,49.49l171.06,0l0,-49.49"
+      android:fillColor="#A17A36"/>
+  <path
+      android:pathData="M335.86,152.49v22.67h-74v-6.9c0,-8.71 7.06,-15.77 15.77,-15.77H335.86z"
+      android:fillColor="#E6E6E6"/>
+  <path
+      android:pathData="M261.86,168.26v6.9h-74v-22.67h58.22C254.8,152.49 261.86,159.55 261.86,168.26z"
+      android:fillColor="#E6E6E6"/>
+  <path
+      android:pathData="M37.76,344.83h138v67.58h-138z"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M37.76,277.24h138v67.59h-138z"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M175.76,209.66l0,67.58l-138,0l0,-67.58l138,0"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M161.9,33.68l-68.52,68.51c-18.92,-18.92 -18.92,-49.59 0,-68.51C112.3,14.75 142.98,14.75 161.9,33.68z"
+      android:fillColor="#4CC18E"/>
+  <path
+      android:pathData="M55.97,155.31h73.89v19.85h-73.89z"
+      android:fillColor="#4CC18E"/>
+  <path
+      android:pathData="M21.26,69.9c8.43,0 15.26,6.83 15.26,15.26s-6.83,15.26 -15.26,15.26C12.84,100.42 6,93.59 6,85.16S12.84,69.9 21.26,69.9z"
+      android:fillColor="#4CC18E"/>
+  <path
+      android:pathData="M106.82,53.12c-1.53,0 -3.07,-0.58 -4.24,-1.76c-2.34,-2.34 -2.35,-6.14 -0,-8.48c6.7,-6.7 15.6,-10.39 25.07,-10.39c0.99,0 1.99,0.04 2.98,0.12c3.3,0.27 5.76,3.17 5.48,6.48c-0.27,3.3 -3.18,5.75 -6.48,5.48c-0.65,-0.05 -1.32,-0.08 -1.99,-0.08c-6.26,0 -12.15,2.44 -16.58,6.87C109.89,52.53 108.35,53.12 106.82,53.12z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M169.76,248.65h12v28.59h-12z"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M144.56,69.59c0,8.43 -6.83,15.26 -15.27,15.26c-5.05,0 -9.53,-2.46 -12.31,-6.26l21.32,-21.32C142.1,60.04 144.56,64.53 144.56,69.59z"
+      android:fillColor="#F7B239"/>
+  <path
+      android:pathData="M132.26,258.95h-51c-8.55,0 -15.5,-6.95 -15.5,-15.5c0,-8.55 6.95,-15.5 15.5,-15.5h4.5c3.31,0 6,2.69 6,6c0,3.31 -2.69,6 -6,6h-4.5c-1.93,0 -3.5,1.57 -3.5,3.5s1.57,3.5 3.5,3.5h51c1.93,0 3.5,-1.57 3.5,-3.5s-1.57,-3.5 -3.5,-3.5h-4.5c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6h4.5c8.55,0 15.5,6.95 15.5,15.5C147.76,251.99 140.81,258.95 132.26,258.95"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M132.26,394.12h-51c-8.55,0 -15.5,-6.95 -15.5,-15.5s6.95,-15.5 15.5,-15.5h4.5c3.31,0 6,2.69 6,6s-2.69,6 -6,6h-4.5c-1.93,0 -3.5,1.57 -3.5,3.5s1.57,3.5 3.5,3.5h51c1.93,0 3.5,-1.57 3.5,-3.5s-1.57,-3.5 -3.5,-3.5h-4.5c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6h4.5c8.55,0 15.5,6.95 15.5,15.5S140.81,394.12 132.26,394.12z"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M132.26,326.53h-51c-8.55,0 -15.5,-6.95 -15.5,-15.5s6.95,-15.5 15.5,-15.5h4.5c3.31,0 6,2.69 6,6s-2.69,6 -6,6h-4.5c-1.93,0 -3.5,1.57 -3.5,3.5s1.57,3.5 3.5,3.5h51c1.93,0 3.5,-1.57 3.5,-3.5s-1.57,-3.5 -3.5,-3.5h-4.5c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6h4.5c8.55,0 15.5,6.95 15.5,15.5S140.81,326.53 132.26,326.53z"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M420.24,169.16h-78.38v-16.67c0,-3.31 -2.69,-6 -6,-6h-58.23c-6.2,0 -11.8,2.61 -15.77,6.79c-3.97,-4.18 -9.57,-6.79 -15.78,-6.79h-58.22c-3.31,0 -6,2.69 -6,6v16.67h-46v-13.85c0,-3.31 -2.69,-6 -6,-6H93.89L39.92,95.33c1.66,-3.02 2.6,-6.49 2.6,-10.18c0,-3.68 -0.94,-7.15 -2.6,-10.18l43.14,-43.14l2.07,2.07c-17.12,21.36 -15.79,52.72 4,72.52c1.17,1.17 2.71,1.76 4.24,1.76c1.53,0 3.07,-0.59 4.24,-1.76l19.47,-19.46c3.54,2.48 7.8,3.88 12.2,3.88c11.73,0 21.27,-9.54 21.27,-21.26c0,-4.41 -1.39,-8.67 -3.88,-12.21l19.46,-19.45c2.34,-2.34 2.34,-6.14 0,-8.48c-10.28,-10.29 -23.96,-15.96 -38.5,-15.96c-12.52,0 -24.4,4.21 -34.02,11.95L77.78,9.59c-2.34,-2.34 -6.14,-2.34 -8.48,0s-2.34,6.14 0,8.48l5.28,5.29L31.43,66.5c-3.02,-1.66 -6.49,-2.6 -10.18,-2.6C9.54,63.9 0,73.44 0,85.16s9.54,21.26 21.26,21.26c3.68,0 7.15,-0.94 10.18,-2.6l45.49,45.49H55.97c-3.31,0 -6,2.69 -6,6v13.85H9.78c-3.31,0 -6,2.69 -6,6v34.5c0,3.31 2.69,6 6,6h21.98v61.58v67.59v67.58c0,3.31 2.69,6 6,6h138c3.31,0 6,-2.69 6,-6v-67.58v-67.59l-0,-0.09H352.82V412.41c0,3.31 2.69,6 6,6h28.42c3.31,0 6,-2.69 6,-6V215.66h27c3.31,0 6,-2.69 6,-6v-34.5C426.24,171.85 423.55,169.16 420.24,169.16M138.56,69.59c0,5.11 -4.16,9.26 -9.27,9.26c-1.2,0 -2.36,-0.22 -3.43,-0.65l12.05,-12.05C138.34,67.22 138.56,68.39 138.56,69.59M153.12,33.97l-59.44,59.43c-12.48,-16.61 -11.17,-40.37 3.94,-55.49c8.02,-8.02 18.68,-12.44 30.02,-12.44C136.95,25.48 145.81,28.46 153.12,33.97M21.26,94.42c-5.11,0 -9.26,-4.15 -9.26,-9.26s4.15,-9.26 9.26,-9.26c5.11,0 9.26,4.15 9.26,9.26S26.36,94.42 21.26,94.42M277.63,158.49h52.23v10.67h-62v-0.9C267.86,162.87 272.24,158.49 277.63,158.49M193.86,158.49h52.22c5.39,0 9.78,4.38 9.78,9.77v0.9h-62V158.49M61.97,161.31h61.89v7.85H61.97V161.31M169.76,338.83h-126v-55.59h126V338.83M169.76,271.24H43.76v-55.58h126v55.49L169.76,271.24M169.76,406.41h-126v-55.58h126V406.41M181.76,265.15V215.66h171.06v49.49H181.76M364.82,406.41V215.66h16.42v190.75H364.82M414.24,203.66H15.78v-22.5h398.46V203.66"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M169.76,215.66h-126v17.18h26.21c2.83,-3.01 6.84,-4.89 11.29,-4.89h4.5c2.93,0 5.38,2.11 5.9,4.89h30.2c0.52,-2.78 2.96,-4.89 5.9,-4.89h4.5c4.45,0 8.46,1.88 11.29,4.89h26.21L169.76,215.66"
+      android:fillColor="#A17A36"/>
+  <path
+      android:pathData="M85.76,227.95h-4.5c-4.45,0 -8.46,1.88 -11.29,4.89h21.69C91.14,230.06 88.69,227.95 85.76,227.95M132.26,227.95h-4.5c-2.93,0 -5.38,2.11 -5.9,4.89h21.69C140.72,229.83 136.71,227.95 132.26,227.95"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M175.76,211.51l-138.57,0l0,21.33l6.57,0l0,-17.18l126,0l0,17.18l6,0l0,-21.33"
+      android:fillColor="#333333"/>
+  <path
+      android:pathData="M381.24,215.66l-16.42,0l0,17.18l16.42,0l0,-17.18"
+      android:fillColor="#A17A36"/>
+  <path
+      android:pathData="M386.52,211.51l-27.7,0l0,21.33l6,0l0,-17.18l16.42,0l0,17.18l5.28,0l0,-21.33"
+      android:fillColor="#333333"/>
 </vector>
