--- a/app/src/main/res/drawable/ic_hint_waffe6.xml
+++ b/app/src/main/res/drawable/ic_hint_waffe6.xml
@@ -1,4 +1,63 @@
-<vector android:height="24dp" android:viewportHeight="60"
-    android:viewportWidth="60" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M41,11c0.552,0 1,-0.447 1,-1V4c0,-0.553 -0.448,-1 -1,-1h-2V0H21v3h-2c-0.552,0 -1,0.447 -1,1v6c0,0.553 0.448,1 1,1h2v38h-2c-0.552,0 -1,0.447 -1,1v6c0,0.553 0.448,1 1,1h2v3h18v-3h2c0.552,0 1,-0.447 1,-1v-6c0,-0.553 -0.448,-1 -1,-1h-2V11H41zM20,9V5h1h18h1v4h-1H21H20zM40,55h-1H21h-1v-4h20V55z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M10.65,37.69h61.32v157.71h-61.32z"
+      android:fillColor="#B3B3B3"/>
+  <path
+      android:pathData="M319.31,436.93h157.71v61.32h-157.71z"
+      android:fillColor="#B3B3B3"/>
+  <path
+      android:pathData="M477.03,155.87v177.41H319.32V220.84c0,-13.39 -10.86,-24.24 -24.24,-24.24H175.63V38.89h184.4C424.63,38.89 477.03,91.27 477.03,155.87z"
+      android:fillColor="#999999"/>
+  <path
+      android:pathData="M363.39,498.24V220.84c0,-37.67 -30.65,-68.32 -68.32,-68.32H10.66V82.96h349.36c40.21,0 72.93,32.71 72.93,72.91v342.37h-69.56V498.24z"
+      android:fillColor="#B3B3B3"/>
+  <path
+      android:pathData="M429.59,432.86h47.43v65.39h-47.43z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M323.28,432.86h41.47v65.39h-41.47z"
+      android:fillColor="#999999"/>
+  <path
+      android:pathData="M10.66,37.7h65.39v47.43h-65.39z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M10.66,149.96h65.39v41.47h-65.39z"
+      android:fillColor="#999999"/>
+  <path
+      android:pathData="M477.03,155.87v177.41h-44.08V155.87c0,-40.21 -32.7,-72.91 -72.93,-72.91H175.63V38.89h184.4C424.63,38.89 477.03,91.27 477.03,155.87z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M319.32,436.93l-11.97,0l0,-36.95l11.97,0l157.7,0l11.97,0l0,36.95l-11.97,0z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M108.93,195.4l0,11.97l-36.95,0l0,-11.97l0,-157.69l0,-11.97l36.95,0l0,11.97z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M501.34,333.29l0,66.68l-205.58,0l0,-66.68l23.56,0l157.71,0z"
+      android:fillColor="#E6E6E6"/>
+  <path
+      android:pathData="M350.63,333.29l0,66.68l-54.87,0l0,-66.68l6.29,0l42.09,0z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M175.63,38.89l0,157.71l0,22.75l-66.7,0l0,-11.97l0,-11.97l0,-157.69l0,-11.97l0,-11.97l66.7,0z"
+      android:fillColor="#E6E6E6"/>
+  <path
+      android:pathData="M175.63,219.34l-66.68,0l0,-54.87l66.68,0l0,6.29l0,42.09z"
+      android:fillColor="#CCCCCC"/>
+  <path
+      android:pathData="M441.48,242.88c-5.89,0 -10.66,-4.77 -10.66,-10.66v-76.34c0,-39.03 -31.76,-70.78 -70.79,-70.78c-5.89,0 -10.66,-4.77 -10.66,-10.66s4.77,-10.66 10.66,-10.66c50.8,0 92.12,41.32 92.12,92.11v76.34C452.14,238.1 447.37,242.88 441.48,242.88z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M472.12,382.98c-5.89,0 -10.66,-4.77 -10.66,-10.66v-11.38c0,-5.89 4.77,-10.66 10.66,-10.66s10.66,4.77 10.66,10.66v11.38C482.79,378.21 478.01,382.98 472.12,382.98z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M441.48,266.34m-10.66,0a10.66,10.66 0,1 1,21.33 0a10.66,10.66 0,1 1,-21.33 0"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M501.34,322.62h-13.65V155.88c0,-70.39 -57.27,-127.66 -127.66,-127.66H186.29V13.76c0,-5.89 -4.77,-10.66 -10.66,-10.66h-66.69c-5.89,0 -10.66,4.77 -10.66,10.66v1.31H71.97c-5.89,0 -10.66,4.77 -10.66,10.66v1.31H10.66C4.77,27.04 0,31.81 0,37.7s4.77,10.66 10.66,10.66h50.65v136.37H10.66C4.77,184.73 0,189.51 0,195.4s4.77,10.66 10.66,10.66h50.65v1.31c0,5.89 4.77,10.66 10.66,10.66h26.3v1.31c0,5.89 4.77,10.66 10.66,10.66h66.69c5.89,0 10.66,-4.77 10.66,-10.66v-12.09h108.79c7.49,0 13.58,6.09 13.58,13.58v101.79h-12.9c-5.89,0 -10.66,4.77 -10.66,10.66v66.69c0,5.89 4.77,10.66 10.66,10.66h0.93v26.29c0,5.89 4.77,10.66 10.66,10.66h1.3v50.65c0,5.89 4.77,10.66 10.66,10.66s10.66,-4.77 10.66,-10.66v-50.65h136.38v50.65c0,5.89 4.77,10.66 10.66,10.66s10.66,-4.77 10.66,-10.66v-50.65h1.3c5.89,0 10.66,-4.77 10.66,-10.66v-26.29h1.69c5.89,0 10.66,-4.77 10.66,-10.66v-66.69C512,327.39 507.23,322.62 501.34,322.62zM82.64,196.7V36.39h15.63v1.31h-0.01v157.69h0.01v1.31L82.64,196.7L82.64,196.7zM164.96,208.68h-45.36V24.42h45.36v14.46v157.71V208.68zM295.07,185.93H186.29V49.55h173.74c58.63,0 106.33,47.7 106.33,106.33v166.74h-136.38V220.83C329.98,201.59 314.32,185.93 295.07,185.93zM306.42,343.95h12.9H477.02h13.65v45.36H306.42V343.95L306.42,343.95zM478.32,426.26H318.01v-15.63h160.31V426.26z"
+      android:fillColor="#333333"/>
 </vector>
