--- a/app/src/main/res/drawable/ic_hint_ort3.xml
+++ b/app/src/main/res/drawable/ic_hint_ort3.xml
@@ -1,5 +1,75 @@
-<vector android:height="24dp" android:viewportHeight="481.83"
-    android:viewportWidth="481.83" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M471.83,153.11c-5.52,0 -10,4.48 -10,10v44.62c-0.21,-0.01 -0.41,-0.03 -0.62,-0.03H20.37c-0.13,0 -0.25,0.02 -0.37,0.02V87.06c0,-5.52 -4.48,-10 -10,-10c-5.52,0 -10,4.48 -10,10v307.7c0,5.52 4.48,10 10,10c5.52,0 10,-4.48 10,-10v-72.36c0.12,0 0.25,0.02 0.37,0.02h440.83c0.21,0 0.41,-0.02 0.62,-0.03v72.37c0,5.52 4.48,10 10,10c5.52,0 10,-4.48 10,-10V163.11C481.83,157.59 477.35,153.11 471.83,153.11zM444.7,292.59H36.87c-5.52,0 -10,-4.48 -10,-10s4.48,-10 10,-10h407.83c5.52,0 10,4.48 10,10S450.22,292.59 444.7,292.59z"/>
-    <path android:fillColor="#FF000000" android:pathData="M165.13,180.99c0,-15.46 -12.54,-28 -28,-28h-78c-15.46,0 -28,12.54 -28,28v15h134V180.99z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M132.12,368.23v35.74H53.91v-61.54h52.41C120.56,342.43 132.12,353.99 132.12,368.23z"
+      android:fillColor="#F98869"/>
+  <path
+      android:pathData="M53.91,370.58h78.21v25.31h-78.21z"
+      android:strokeAlpha="0.38"
+      android:fillColor="#781900"
+      android:fillAlpha="0.38"/>
+  <path
+      android:pathData="M53.91,501.57H7.6V236.76h16.55c16.43,0 29.75,13.32 29.75,29.75v235.06H53.91z"
+      android:fillColor="#F98869"/>
+  <path
+      android:pathData="M504.4,501.57h-46.3V386.34c0,-7.66 6.21,-13.87 13.87,-13.87h32.44V501.57z"
+      android:fillColor="#F98869"/>
+  <path
+      android:pathData="M53.91,424.26h404.19v35.91h-404.19z"
+      android:fillColor="#F98869"/>
+  <path
+      android:pathData="M53.91,388.34h404.19v35.91h-404.19z"
+      android:fillColor="#FFBCAB"/>
+  <path
+      android:pathData="M212.64,40.41h197.05v281.33h-197.05z"
+      android:fillColor="#3C66B1"/>
+  <path
+      android:pathData="M212.64,40.41h197.05v281.33h-197.05z"
+      android:fillColor="#3C66B1"/>
+  <path
+      android:pathData="M212.64,25.42h197.05v296.32h-197.05z"
+      android:fillColor="#3C66B1"/>
+  <path
+      android:pathData="M296.29,40.41h29.75v281.33h-29.75z"
+      android:fillColor="#B8D6FD"/>
+  <path
+      android:pathData="M212.64,166.2h95.84v29.75h-95.84z"
+      android:fillColor="#B8D6FD"/>
+  <path
+      android:pathData="M307.04,166.2h102.65v29.75h-102.65z"
+      android:fillColor="#B8D6FD"/>
+  <path
+      android:pathData="M371.68,61.07c4.49,6.53 7.13,14.44 7.13,22.97c0,22.41 -18.17,40.58 -40.58,40.58c-4.25,0 -8.34,-0.65 -12.19,-1.87c7.32,10.63 19.57,17.61 33.45,17.61c22.41,0 40.58,-18.17 40.58,-40.58C400.07,81.63 388.13,66.25 371.68,61.07z"
+      android:fillColor="#FFF5CC"/>
+  <path
+      android:pathData="M185.8,10.43h250.73v29.98h-250.73z"
+      android:fillColor="#B8D6FD"/>
+  <path
+      android:pathData="M326.04,166.2h20.07v29.75h-20.07z"
+      android:fillColor="#315591"/>
+  <path
+      android:pathData="M212.64,40.41h197.05v20.07h-197.05z"
+      android:strokeAlpha="0.58"
+      android:fillColor="#315591"
+      android:fillAlpha="0.58"/>
+  <path
+      android:pathData="M53.91,442.22h404.19v17.96h-404.19z"
+      android:strokeAlpha="0.38"
+      android:fillColor="#781900"
+      android:fillAlpha="0.38"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M504.4,364.87h-46.3c-4.2,0 -7.6,3.4 -7.6,7.6v8.27H139.72v-38.3c0,-4.2 -3.4,-7.6 -7.6,-7.6H61.51v-98.07c0,-4.2 -3.4,-7.6 -7.6,-7.6H7.6c-4.2,0 -7.6,3.4 -7.6,7.6V501.57c0,4.2 3.4,7.6 7.6,7.6h46.3c4.2,0 7.6,-3.4 7.6,-7.6v-33.79H450.49v33.79c0,4.2 3.4,7.6 7.6,7.6h46.3c4.2,0 7.6,-3.4 7.6,-7.6V372.47C512,368.27 508.6,364.87 504.4,364.87zM450.49,416.65H61.51v-20.71H450.49V416.65zM124.51,350.04v28.11h-63V350.04H124.51zM46.3,493.97H15.21V244.36h31.09v98.07v43.32v2.59v35.91v35.92V493.97zM61.51,452.57v-20.71H450.49v20.71H61.51zM496.79,493.97h-31.09v-33.79v-35.92v-35.91v-8.27h31.09V493.97z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M242.67,108.33h3.82v3.82c0,4.2 3.4,7.6 7.6,7.6c4.2,0 7.6,-3.4 7.6,-7.6v-3.82h3.82c4.2,0 7.6,-3.4 7.6,-7.6c0,-4.2 -3.4,-7.6 -7.6,-7.6h-3.82v-3.82c0,-4.2 -3.4,-7.6 -7.6,-7.6c-4.2,0 -7.6,3.4 -7.6,7.6v3.82h-3.82c-4.2,0 -7.6,3.4 -7.6,7.6C235.06,104.92 238.47,108.33 242.67,108.33z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M272.93,276.9l2.7,-2.7c2.97,-2.97 2.97,-7.78 0,-10.75c-2.97,-2.97 -7.78,-2.97 -10.75,0l-2.7,2.7l-2.7,-2.7c-2.97,-2.97 -7.78,-2.97 -10.75,0c-2.97,2.97 -2.97,7.78 0,10.75l2.7,2.7l-2.7,2.7c-2.97,2.97 -2.97,7.78 0,10.75c1.48,1.48 3.43,2.23 5.38,2.23c1.95,0 3.89,-0.74 5.38,-2.23l2.7,-2.7l2.7,2.7c1.48,1.48 3.43,2.23 5.38,2.23c1.95,0 3.89,-0.74 5.38,-2.23c2.97,-2.97 2.97,-7.78 0,-10.75L272.93,276.9z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M185.8,48.01h19.23v118.19v29.74V321.74c0,4.2 3.4,7.6 7.6,7.6h83.66h29.75h83.66c4.2,0 7.6,-3.4 7.6,-7.6V195.95v-29.74V48.01h19.23c4.2,0 7.6,-3.4 7.6,-7.6V10.43c0,-4.2 -3.4,-7.6 -7.6,-7.6H185.8c-4.2,0 -7.6,3.4 -7.6,7.6V40.41C178.19,44.61 181.6,48.01 185.8,48.01zM220.24,173.81h68.45v14.54h-68.45V173.81zM288.69,158.6h-68.45V48.01h68.45V158.6zM220.24,203.55h68.45v110.58h-68.45V203.55zM303.89,314.14V195.95v-29.74V48.01h14.54v266.12h-14.54V314.14zM386.28,80.5c3.93,5.47 6.18,12.15 6.18,19.28c0,18.18 -14.79,32.98 -32.98,32.98c-3.63,0 -7.19,-0.6 -10.55,-1.74c21.43,-4.88 37.47,-24.1 37.47,-46.99C386.41,82.86 386.37,81.68 386.28,80.5zM359.48,147.98c18.45,0 34.51,-10.43 42.6,-25.7v36.33h-68.45v-18.17C341.26,145.28 350.2,147.98 359.48,147.98zM402.09,188.34h-65.68v-14.54h65.68V188.34zM333.64,314.14V203.55h68.45v110.58L333.64,314.14L333.64,314.14zM402.09,77.19c-5.78,-10.92 -15.69,-19.45 -28.13,-23.37c-3.1,-0.98 -6.47,0.13 -8.4,2.73c-1.93,2.61 -1.99,6.16 -0.15,8.83c3.79,5.51 5.79,11.96 5.79,18.66c0,18.18 -14.79,32.98 -32.98,32.98c-1.54,0 -3.07,-0.12 -4.59,-0.33V48.01h68.45v29.17H402.09zM193.4,18.03h235.52v14.77H409.69h-83.66H296.29h-83.66h-19.23V18.03H193.4z"/>
 </vector>
