--- a/app/src/main/res/drawable/ic_hint_ort5.xml
+++ b/app/src/main/res/drawable/ic_hint_ort5.xml
@@ -1,4 +1,45 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000" android:pathData="M266.5,45.39c-19.9,0 -39.8,1.51 -59.7,4.51 -29.6,26.08 -45.4,71.3 -45.4,115.4 0,20.2 3.3,39.8 9.6,57 6.5,-0.3 12.9,-0.5 19.4,-0.5 18.5,-0.8 31.2,0 46.6,2.6 -6.1,-18.4 -9.1,-38.7 -9.1,-59.1 0,-43.7 13.6,-89.1 42.1,-119.83h-3.5zM295.4,46.53c-32.3,25.42 -49.5,72.67 -49.5,118.77 0,22.2 3.9,43.6 11.5,61.9 12,1.9 23.9,4.3 35.9,7.2 5.8,0.2 11.5,1.4 16.9,3.4 -12,-21.2 -19,-48.7 -19,-78.8 0,-31.8 7.8,-60.77 21.1,-82.38 6.2,-10.15 13.9,-18.81 22.6,-25.13 -13.2,-2.3 -26.3,-3.97 -39.5,-4.96zM177.1,55.48c-3.2,0.74 -6.5,1.51 -9.8,2.33l-0.4,0.1 -0.3,0.1C96.79,69.64 80.62,173.7 118.1,228.1c11.4,-2 22.8,-3.5 34.2,-4.6 -5.9,-18.1 -8.9,-38.1 -8.9,-58.2 0,-39.2 10.9,-79.7 33.7,-109.82zM367.8,58.19c-14.7,0 -29,9.74 -40.1,27.87 -11.2,18.14 -18.5,44.14 -18.5,72.94 0,28.8 7.3,54.8 18.5,72.9 11.1,18.2 25.4,27.9 40.1,27.9 14.7,0 29,-9.7 40.1,-27.9 11.2,-18.1 18.5,-44.1 18.5,-72.9 0,-28.8 -7.3,-54.8 -18.5,-72.94 -11.1,-18.13 -25.4,-27.87 -40.1,-27.87zM367.7,192.2h0.2c7.2,0.1 11.6,5.3 13.9,10 2.3,4.7 3.4,10 3.4,15.9s-1.1,11.2 -3.4,15.9c-2.3,4.7 -6.7,9.9 -13.9,10h-0.2c-7.2,-0.1 -11.6,-5.3 -13.9,-10 -2.3,-4.7 -3.4,-10 -3.4,-15.9s1.1,-11.2 3.4,-15.9c2.3,-4.7 6.7,-9.9 13.9,-10zM190.4,239.7c-19.8,0 -39.7,1.5 -59.6,4.5 -29.6,26.1 -45.45,71.2 -45.45,115.3 0,42 14.04,81.3 40.35,101.9 21.1,3.4 42.2,5.2 63.2,5.2 -25,-25.9 -37,-66.3 -37,-107 0,-43.8 13.5,-89.2 42.1,-119.9zM219.4,240.8c-32.4,25.4 -49.6,72.7 -49.6,118.8 0,45 16.2,87 46.5,106.2 14.2,-1 28.4,-2.7 42.6,-5.1 -8.7,-6.4 -16.3,-15 -22.5,-25.1 -13.3,-21.7 -21.1,-50.6 -21.1,-82.4 0,-31.8 7.8,-60.7 21.1,-82.3 6.2,-10.1 13.8,-18.8 22.4,-25.1 -13.2,-2.3 -26.3,-4 -39.4,-5zM101,249.9c-3.31,0.7 -6.5,1.5 -9.73,2.3h-0.43l-0.31,0.1c-90.83,15.1 -90.83,186.8 0,201.9l0.31,0.1h0.43l3.65,0.9c-18.61,-25.6 -27.52,-60.5 -27.52,-95.7 0,-39.1 10.88,-79.6 33.6,-109.6zM291.8,252.4c-14.7,0 -28.9,9.8 -40.1,27.9 -11.2,18.1 -18.5,44.1 -18.5,72.9 0,28.9 7.3,54.8 18.5,73 11.2,18.1 25.4,27.9 40.1,27.9 14.7,0 28.9,-9.8 40.1,-27.9 11.2,-18.2 18.5,-44.1 18.5,-73 0,-28.8 -7.3,-54.8 -18.5,-72.9 -11.2,-18.1 -25.4,-27.9 -40.1,-27.9zM430.8,252.4c-8.9,0.1 -17.7,3.7 -25.8,10.7 -0.2,0.2 -0.4,0.4 -0.6,0.5 -4.9,4.4 -9.5,10 -13.6,16.8 -11.1,18.1 -18.4,44 -18.4,72.8 0,28.8 7.3,54.8 18.5,72.9C402,444.3 416.3,454 431,454c14.7,0 29,-9.7 40.1,-27.9 11.2,-18.1 18.5,-44.1 18.5,-72.9 0,-28.8 -7.3,-54.8 -18.5,-72.9 -11.1,-18.2 -25.4,-27.9 -40.1,-27.9zM291.8,386.5c7.2,0 11.7,5.2 14.1,9.9 2.3,4.7 3.3,10 3.3,16 0,5.9 -1,11.3 -3.3,15.9 -2.4,4.8 -6.9,9.9 -14.1,9.9 -7.2,0 -11.7,-5.1 -14,-9.9 -2.4,-4.6 -3.4,-10 -3.4,-15.9 0,-6 1,-11.3 3.4,-16 2.3,-4.7 6.8,-9.9 14,-9.9zM430.9,386.5h0.2c7.2,0.1 11.6,5.3 13.9,10 2.3,4.7 3.4,10 3.4,15.9s-1.1,11.2 -3.4,15.9c-2.3,4.7 -6.7,9.9 -13.9,10h-0.2c-7.2,-0.1 -11.6,-5.3 -13.9,-10 -2.3,-4.7 -3.4,-10 -3.4,-15.9s1.1,-11.2 3.4,-15.9c2.3,-4.7 6.7,-9.9 13.9,-10zM361.4,403.3c-3.5,11.9 -8.3,22.8 -14.1,32.3 -8.5,13.6 -19.4,24.6 -31.9,30.8 27.5,0.9 55.1,-0.9 82.6,-5.7 -8.6,-6.3 -16.3,-15 -22.5,-25.1 -5.8,-9.5 -10.6,-20.4 -14.1,-32.3z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M25.34,275.82h275.78v198.46h-275.78z"
+      android:fillColor="#CAA977"/>
+  <path
+      android:pathData="M8.02,227.74h293.1v48.08h-293.1z"
+      android:fillColor="#DFCAA3"/>
+  <path
+      android:pathData="M301.12,275.82h185.55v198.46h-185.55z"
+      android:fillColor="#A88D63"/>
+  <path
+      android:pathData="M301.12,227.74h202.86v48.08h-202.86z"
+      android:fillColor="#CAA977"/>
+  <path
+      android:pathData="M435.95,305.64c7.83,0 14.17,6.35 14.17,14.17c0,7.83 -6.35,14.18 -14.17,14.18H376.32c-7.83,0 -14.18,-6.35 -14.18,-14.18c0,-7.83 6.34,-14.17 14.18,-14.17H435.95z"
+      android:fillColor="#333E48"/>
+  <path
+      android:pathData="M25.34,375.04h123.65v52.71h-123.65z"
+      android:fillColor="#D16A70"/>
+  <path
+      android:pathData="M131.04,74.79h212.55v152.95h-212.55z"
+      android:fillColor="#CAA977"/>
+  <path
+      android:pathData="M117.7,37.73h225.9v37.06h-225.9z"
+      android:fillColor="#DFCAA3"/>
+  <path
+      android:pathData="M343.6,74.79h143v152.95h-143z"
+      android:fillColor="#A88D63"/>
+  <path
+      android:pathData="M343.6,37.73h156.35v37.06h-156.35z"
+      android:fillColor="#CAA977"/>
+  <path
+      android:pathData="M447.51,97.77c6.03,0 10.93,4.89 10.93,10.92c0,6.03 -4.89,10.93 -10.93,10.93h-45.96c-6.03,0 -10.93,-4.89 -10.93,-10.93c0,-6.03 4.89,-10.92 10.93,-10.92C401.55,97.77 447.51,97.77 447.51,97.77z"
+      android:fillColor="#333E48"/>
+  <path
+      android:pathData="M131.04,151.26h95.3v40.62h-95.3z"
+      android:fillColor="#D16A70"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M503.98,219.71h-9.36V82.81h5.32c4.43,0 8.02,-3.59 8.02,-8.02V37.73c0,-4.43 -3.59,-8.02 -8.02,-8.02H117.7c-4.43,0 -8.02,3.59 -8.02,8.02v37.06c0,4.43 3.59,8.02 8.02,8.02h5.32v136.9H8.02c-4.43,0 -8.02,3.59 -8.02,8.02v48.08c0,4.43 3.59,8.02 8.02,8.02h9.29v190.43c0,4.43 3.59,8.02 8.02,8.02h461.33c4.43,0 8.02,-3.59 8.02,-8.02v-190.43h9.29c4.43,0 8.02,-3.59 8.02,-8.02v-48.08C512,223.3 508.41,219.71 503.98,219.71zM351.62,45.75h140.3v21.02H351.62V45.75zM351.62,82.81h126.96v136.9H351.62V82.81zM125.72,45.75h209.85v21.02H125.72V45.75zM226.35,199.9c4.43,0 8.02,-3.59 8.02,-8.02v-40.62c0,-4.43 -3.59,-8.02 -8.02,-8.02h-87.28V82.81h196.51v136.9H139.07v-19.81h87.28V199.9zM139.07,183.86v-24.58h79.26v24.58H139.07zM293.1,466.25H33.36v-30.48H148.99c4.43,0 8.02,-3.59 8.02,-8.02v-52.7c0,-4.43 -3.59,-8.02 -8.02,-8.02H33.36v-83.18h259.74v182.41H293.1zM33.36,419.72v-36.66h107.61v36.66H33.36zM293.1,267.8H16.04v-32.04H293.1V267.8zM478.64,466.25H309.14V283.84h169.5V466.25zM495.96,267.8H309.14v-32.04h186.82V267.8z"/>
 </vector>
