--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,9 +20,13 @@
     <color name='icon_background'>#20FFFFFF</color>
     <color name='error'>#B00020</color>
     <color name='recieved_message_background'>#090D16</color>
-    <color name='correct_guess'>#FF1FFF1F</color>
-    <color name='wrong_guess'>#FFFF1F1F</color>
-    <color name='mixed_guess'>#FFFFFF1F</color>
+
+<!--    https://www.schemecolor.com/red-yellow-and-green.php -->
+<!--    Color Man -->
+    <color name='correct_guess'>#FF7BB662</color>
+    <color name='wrong_guess'>#FFE03C32</color>
+    <color name='mixed_guess'>#FFFFD301</color>
+
     <color name='minesweeper_correct'>#AF1FFF1F</color>
     <color name='minesweeper_wrong'>#AFFF1F1F</color>
 </resources>
