--- a/app/src/main/res/layout/fragment_comms_softkeyboard.xml
+++ b/app/src/main/res/layout/fragment_comms_softkeyboard.xml
@@ -117,7 +117,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_menu" />
+            app:menu="@menu/bottom_menu_game" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
