--- a/app/src/main/res/menu/bottom_menu_game_ghost.xml
+++ b/app/src/main/res/menu/bottom_menu_game_ghost.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/followPlayersFragment"
+        android:icon="@drawable/ic_eye"
+        android:title="Observe" />
+    <item
         android:id="@+id/commsFragment"
         android:icon="@drawable/ic_comms"
         android:title="Communication" />
